--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-    <title>ChatGPT 中文版：国内直连指南（支持GPT-4、GPT-4o、GPT-o1、GPT-o3 和 DeepSeek，无需翻墙）【5月持续更新】</title>
+    <title>ChatGPT 中文版：国内直连指南（支持GPT-4、GPT-4o、GPT-o1、GPT-o3 和 DeepSeek，无需翻墙）【6月持续更新】</title>
     <meta name="description" content="ChatGPT 中文版是 OpenAI 开发的 ChatGPT 模型的中文优化版本，专为中文用户设计，提供更流畅、更精准的智能AI对话。全面体验 ChatGPT 中文版，无需翻墙，支持 GPT-4、4o、o1 和 DeepSeek R1 及更多中文功能。本项目为用户提供一站式的 ChatGPT 中文版使用指南，包括国内可用的 ChatGPT 镜像网站推荐和使用教程，帮助快速上手 ChatGPT，无论是个人使用还是专业需求，均可无限使用 ChatGPT-4、GPT-4o 和 o1、o3及 DeepSeek R1！">
     <meta name="keywords" content="ChatGPT,GPT,chat gpt,Chat GPT,ChatGPT中文版,ChatGPT中文网,ChatGPT中文版镜像网站,ChatGPT官网,ChatGPT镜像网站,ChatGPT镜像站,ChatGPT网站,ChatGPT镜像,免费ChatGPT,国内ChatGPT,ChatGPT国内,ChatGPT中文版免费,ChatGPT免费,ChatGPT中文站,ChatGPT中文网站,chatgpt中文镜像,ChatGPT国内版,ChatGPT中国站,ChatGPT,人工智能,ChatGPT中文网官网,DeepSeek,Deep Seek,deepseek, deep seek,deepseek R1">
     <meta property="og:title" content="ChatGPT 中文版：国内直连指南（支持GPT-4、GPT-4o、GPT-o1、GPT-o3 和 DeepSeek，无需翻墙）">         
@@ -176,7 +176,7 @@
             <h2>2025年最新的 ChatGPT 中文版、ChatGPT 镜像网站</h2>
             <h2>轻松使用上 ChatGPT、DeepSeek ~</h2>
             <h3>无需翻墙、无需注册账号~ </h3>
-            <a href="https://chat.lanjing.ai/" target="_self" class="button">开始对话</a>
+            <a href="https://chat.lanjing.pro/" target="_self" class="button">开始对话</a>
             <h4>更新日期：<strong id="curdate"></strong></h4>
         </div>
         <div class="arrow-down" onclick="scrollToContent()">⬇️更多ChatGPT中文版镜像网站</div>
@@ -187,8 +187,8 @@
 
     <p><strong>全面体验 ChatGPT 中文版，无需翻墙，支持 GPT-4、4o、o1、o3 和 DeepSeek R1 及中文应用</strong></p>
     <p>本项目旨在为用户提供一站式的 <strong>ChatGPT 中文版使用指南</strong>，同时整理了国内可用的 <strong>ChatGPT 镜像网站</strong>和<strong>官网使用教程</strong>，帮助您快速上手 ChatGPT，无论是个人使用还是专业需求。</p>
-    <p>ChatGPT 中文版入口：<a href="https://chat.lanjing.ai" target="_blank">https://chat.lanjing.ai</a></p>
-    <p>ChatGPT 镜像网站入口：<a href="https://chat.yixiaai.com/" target="_blank">https://chat.yixiaai.com/</a></p>
+    <p>ChatGPT 中文版入口：<a href="https://chat.lanjing.pro" target="_blank">https://chat.lanjing.pro</a></p>
+    <p>ChatGPT 镜像网站入口：<a href="https://xsimplechat.com/" target="_blank">https://chat.yixiaai.com/</a></p>
 
     <hr>
     <h2 id="什么是-chatgpt-中文版">什么是 ChatGPT 中文版？</h2>
@@ -215,7 +215,7 @@
             <tbody>
                 <tr>
                     <td>蓝鲸AI</td>
-                    <td><a href="https://chat.lanjing.ai">chat.lanjing.ai</a></td>
+                    <td><a href="https://chat.lanjing.pro">chat.lanjing.pro</a></td>
                     <td>GPT-4, GPT-3.5</td>
                     <td>有</td>
                     <td>国内邮箱注册</td>
@@ -224,7 +224,7 @@
                 </tr>
                 <tr>
                     <td>一下AI</td>
-                    <td><a href="https://chat.yixiaai.com">chat.yixiaai.com</a></td>
+                    <td><a href="https://xsimplechat.com">chat.yixiaai.com</a></td>
                     <td>GPT-4, GPT-o1, canvas</td>
                     <td>有</td>
                     <td>扫码使用</td>
@@ -233,7 +233,7 @@
                 </tr>
                 <tr>
                     <td>AI智慧岛</td>
-                    <td><a href="https://chat.lify.vip">chat.lify.vip</a></td>
+                    <td><a href="https://chat.yixiaai.com">chat.lify.vip</a></td>
                     <td>GPT-4, GPT-3.5</td>
                     <td>有</td>
                     <td>扫码使用</td>
@@ -303,7 +303,7 @@
     <h2 id="chatgpt-中文版的使用指南">ChatGPT 中文版的使用指南</h2>
     <p><strong>通过镜像网站快速体验</strong></p>
     <ol>
-        <li><strong>选择镜像站点</strong>：访问推荐的镜像站点（如 <a href="https://chat.lanjing.ai/">https://chat.lanjing.ai/</a>）。</li>
+        <li><strong>选择镜像站点</strong>：访问推荐的镜像站点（如 <a href="https://chat.lanjing.pro/">https://chat.lanjing.pro/</a>）。</li>
         <li><strong>扫码使用</strong>：
             <ul>
                 <li><strong>扫码登录</strong>：扫码即可登录。</li>
